# jsonscreamer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-pipeline.yml
json_screamer/: __init__.py  _types.py  array.py  basic.py  compile.py  format.py  logical.py  object_.py  resolve.py
jsonscreamer/: __init__.py  _types.py  array.py  basic.py  compile.py  format.py  logical.py  object_.py  resolve.py  types.py
tests/: conftest.py  test_array.py  test_basic.py  test_compile.py  test_complex.py  test_format.py  test_logical.py  test_performance.py
tests/suite/: test_suite.py
