[tool.poetry]
name = "jsonscreamer"
version = "0.1.0"
description = "Fast JSON Schema Validator"
authors = ["Oliver Margetts <oliver.margetts@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fqdn = "^1.5.1"
idna = "^3.3"
jsonpointer = "^2.3"
rfc3987 = "^1.3.8"
uri-template = "^1.2.0"
jsonschema = "^4.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
flake8-bugbear = "^22.4.25"
mypy = "^0.960"
isort = "^5.10.1"
pytest = "^7.1.2"
fastjsonschema = "^2.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
